# yaytapi

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: helpers.rs  local.rs  main.rs  routes.rs  settings.rs
src/routes/: channels.rs  playlist.rs  video.rs
static/: home.html
