[package]
name = "yaytapi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"
[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.24"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
mongodb = "2.5.0"
regex = "1.8.1"
reqwest = "0.11.17"
reqwest-streams = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
substring = "1.4.5"
tokio = { version = "1.28.0" }
tokio-stream = "0.1.14"
unqlite = { version = "1.5.0", optional = true }
yayti = { git = "https://github.com/MarmadileManteater/yayti", branch = "0.3.0", version = "0.3.0", features = ["decipher_streams", "parse_languages_to_published" ] }
urlencoding = "2.1.2"
mime_guess = "2.0.4"
mimalloc = "0.1.37"
common_macros = "0.1.1"
actix-files = "0.6.2"

[features]
default = ["unqlite"]
unqlite = ["dep:unqlite"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
